# Kurs_Test

./: CMakeLi.txt  CMakeLis.txt  CMakeLists.txt  README.md
include/: insert.h  merge_sort.h  piramyd.h  quick.h
sources/: insert.cpp  kurs_test.cpp  merge.cpp  piramyd.cpp  quick.cpp
tests/: testsortinsert.cpp  testsortmerge.cpp  testsortt.cpp
